# all_new_talk_with_db

./: .env  .gitignore  docker-compose.yaml  init.sh  products-100.csv
all_new_db_talks/: Cargo.toml  diesel.toml
all_new_db_talks/src/: lib.rs  main.rs
all_new_db_talks/src/agent/: mod.rs  text_to_sql.rs
all_new_db_talks/src/configuration/: db_config.rs  llm_config.rs  mod.rs  model_config.rs
all_new_db_talks/src/configuration/load_config/: db_config_factory.rs  maria.rs  mod.rs  mysql.rs  postgrest.rs  sqlite.rs  trait_get_uri.rs
all_new_db_talks/src/datasource/: async_db_utill.rs  csv_utill.rs  db_utill.rs  mod.rs
all_new_db_talks/src/trait_req_impl/: chain.rs  csv_trait.rs  mod.rs
