[package]
name = "all_new_db_talks"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
dotenv = "0.15.0"
ollama-rs = "0.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx ={ version = "0.8.5", features = ["mysql", "runtime-async-std", "runtime-tokio"]}
tokio = {version = "1.44.2", features = ["full","rt-multi-thread"]}
diesel = { version = "2.2.0", features = ["mysql"] }
mysql = "26.0.0"

rust-csv = "0.1.0"
datafusion = "47.0.0"
arrow = "55.0.0"
